EDGECLOUD-370: VerifyLocation reply parm names are inconsistent with other parms
